--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "orangehill/iseed": "^3.0",
-        "tcg/voyager": "^1.5"
+        "tcg/voyager": "^1.5",
+        "wire-elements/spotlight": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
