--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,9 @@ jobs:
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo docker-php-ext-install zip
-      - run: sudo docker-php-ext-install pdo pdo_mysql pdo_pgsql
+      - run: sudo docker-php-ext-install pdo
+      - run: sudo pdo_mysql
+      - run: sudo pdo_pgsql
 
       # Download and cache dependencies
       - restore_cache:
